levels in a subcommunity api integrated

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9008,6 +9008,7 @@ i {
   -webkit-transition: all 3.5s ease 0s;
   -o-transition: all 3.5s ease 0s;
   transition: all 3.5s ease 0s;
+  min-height: 397px;
 }
 
 .product-img:before {
