--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19388,3 +19388,9 @@ a.ltn__utilize-toggle.close {
 .liveinStyleTitle:hover{
   color: white;
 }
+.pr{
+  padding-right: 5px;
+}
+.mrrr{
+  margin: 20px;
+}
