--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19424,6 +19424,126 @@ a.ltn__utilize-toggle.close {
 .brokerName{
   margin-bottom: 0;
 }
+.body{
+  background-image: url(https://totallyhomerealestate.com/admin/uploads/home/fgh.jpeg);
+  background-size:cover;
+  height: 100%;
+  width: 100%;
+}
+.hr{
+  background: white;	
+}
+.bbg{
+  color: white;
+}
+
+.contact-form{
+background:rgba(245, 245, 245, 0.6);
+color:white;
+margin-top: 100px;
+padding: 20px;
+box-shadow: 0px 0px 10px 3px grey;
+}
 
 
 
+
+.first_col {
+  background-color: white;
+  height: 550px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  position: relative;
+  width: 550px;
+  left: 155px;
+  top: 171px;
+  border-radius: 20px;
+z-index: 1;
+}
+
+.img-fluid {
+  border-radius: 20px;
+}
+
+.row-last {
+  width: 60% !important;
+  position: relative !important;
+  left: 350px;
+  top: 90px;
+  height: 200px;
+  padding-bottom: 100px !important;
+  background-color: #c1b688;
+  border-radius: 20px;
+  z-index: 10;
+}
+
+.btn-primary {
+  background-color: #c1b688;
+  border: #c1b688;
+
+}
+
+.btn-primary:hover {
+  background-color: black !important;
+}
+
+.form-control {
+  height: 52px;
+  background: #fff;
+  font-size: 14px;
+  border-radius: 2px;
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
+  border: 1px solid #c1b688;
+  z-index: 1;
+}
+.form-control[type=text]:focus {
+border: 2px solid #555;
+}
+@media only screen and (max-width: 600px) {
+  .first_col {
+      position: initial;
+      left: 0 !important;
+  }
+
+  .sec_col {
+      z-index: 1 !important;
+  }
+
+  .row-last {
+      left: 0 !important;
+      width: 100% !important;
+      height: 500px !important;
+      top: 0 !important;
+  }
+}
+
+
+.card{
+  border-radius: 20px !important;
+  padding: 32px;
+}
+.card-img-top{
+  border-radius: 20px !important;
+
+}
+.bg-section{
+      background-image: url('https://www.travelandleisure.com/thmb/Ob_Nwm7hl66sqsHuQghB9ERCEjs=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/dubai-DUBAITG0721-04b6fdc668e649adb5368b3db401651c.jpg');
+}
+h4{
+      font-size: 2.25rem !important;
+}
+p{
+      font-size: 1.5rem !important;
+}
+.btn-primary{
+  background-color: #ef2027 !important;
+  border-color: #ef2027 !important;
+  width: 100%;
+  border-radius: 10px !important;
+}
+.form-control{
+  height: 55px !important;
+  border-radius: 7px !important;
+  color: #111111;
+  background-color: #e5e5e5 !important;
+}
