--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -68,7 +68,7 @@ font-family: 'Nunito Sans', sans-serif;
 font-family: 'Poppins', sans-serif;
 
 */
-@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:ital,wght@0,121900;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,400&display=swap');
 /* ====================================================
     Gutter Code 
 ==================================================== */
@@ -1214,6 +1214,7 @@ code {
 ---------------------------------------------------- */
 input[type="text"],
 input[type="email"],
+input[type="number"],
 input[type="password"],
 input[type="submit"],
 textarea {
@@ -19457,4 +19458,8 @@ a.ltn__utilize-toggle.close {
   border-radius: 7px !important;
   color: #111111;
   background-color: #e5e5e5 !important;
+}
+
+.hoverHeading{
+  cursor: pointer;
 }
