--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11081,8 +11081,8 @@ input::placeholder {
 }
 
 .carousel img {
-  width: 100%;
-  height: auto;
+  width: 100%!important;
+  height: 80vh!important;
   max-width: 100%;
 }
 
@@ -19466,66 +19466,3 @@ a.ltn__utilize-toggle.close {
 
 
 
-@import "~slick-carousel/slick/slick.css"; 
-@import "~slick-carousel/slick/slick-theme.css";
-
-.slider{
-  width: 100%;
-  height: 400px;
-}
-.header{
-  margin: 50px auto;
-  text-align: center;
-  font-size: 80px;
-}
-
-.slide, .slide img{
-  width: 100%;
-  height: 350px;
-}
-.slide{
-  /* opacity: .5; */
-  transform: scale(.7);
-  transition: .5s;
-  filter: blur(5px);
-}
-
-.slide-active{
-  filter: blur(0);
-  opacity: 1;
-  transform: scale(1.1);
-}
-.arrow{
-  font-size: 30px;
-  padding: 5px 15px;
-  border-radius: 10px;
-  box-shadow: 0 0 5px 3px #ccc;
-  display: flex;
-  width: 50px;
-  position: absolute;
-  top: 200px;
-  z-index: 100;
-  cursor: pointer;
-}
-.arrow-right{
-  right: 20px;
-}
-.arrow-left{
-  left: 20px;
-}
-.dot{
-  margin-top: 20px;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  box-shadow: 0 0 5px 3px #ccc;
-}
-.dot-active{
-  background: #121227;
-  box-shadow: 0 0 15px 10px #ccc;
-}
-@media screen and (max-width: 768px) {
-  .header{
-    font-size: 7vw;
-  }
-}
