--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11083,7 +11083,7 @@ input::placeholder {
 
 .carousel img {
   width: 100%!important;
-  height: 80vh!important;
+  height: 100vh!important;
   max-width: 100%;
 }
 
@@ -19518,6 +19518,8 @@ a.ltn__utilize-toggle.close {
 
 
 
-
+.my-svg path {
+  fill: red;
+}
 
 
